@@ -1,2 +1,7 @@
+[next]
+[-] Delete $witdh, $height. Use $imageOptions['width'] and $imageOptions['height'].
+[+] Add $imageOptions - the HTML options for the image tag.
+[+] Add default css-class for column.
+
 1.0
 [+] Initial public release.
